# tidy-downloads

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
launchd/: com.sortwise.plist
macos-app/: Info.plist  Sortwise.swift  generate_icon.py
sortwise/: __init__.py  cli.py  core.py  menubar.py
