[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sortwise"
version = "0.1.0"
description = "AI-powered Downloads folder organizer. Uses Claude to classify files into smart categories."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fabio De Riu" }]
keywords = ["downloads", "organizer", "ai", "claude", "macos", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
include = ["sortwise*"]

[project.optional-dependencies]
menubar = ["rumps>=0.4.0"]

[project.scripts]
sortwise = "sortwise.cli:main"
sortwise-menubar = "sortwise.menubar:main"

[project.urls]
Homepage = "https://github.com/fabioderiu/sortwise"
Issues = "https://github.com/fabioderiu/sortwise/issues"
